Fix misalignment of search & star icon

--- a/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-search-filter-container/style.scss
+++ b/client/jetpack-cloud/sections/agency-dashboard/sites-overview/site-search-filter-container/style.scss
@@ -27,7 +27,7 @@
 		box-shadow: none;
 		.search__open-icon {
 			width: 40px;
-			@include break-large() {
+			@include break-wide() {
 				width: 60px;
 			}
 		}
